2007-05-11  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (debian_arch_eq): Rename to ...
	(debarch_eq): ... this. Add prototype. Fix all callers.
	(debian_arch_is): Rename to ...
	(debarch_is): ... this. Add prototype. Fix all callers.

2007-05-11  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl ($manual): Rename to ...
	($mode): ... this. Fix all users.
	(read_link_group): Change gl() name from 'manflag' to 'update_mode',
	and badfmt() string from 'manflag' to 'invalid update mode'.

2007-05-11  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl ($mode): Rename to ...
	($action): ... this. Fix all users.
	(checkmanymodes): Rename to ...
	(check_many_actions): ... this. Fix all callers. Add prototype.
	Change the error message to say 'commands' instead of 'modes'.

2007-05-10  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Only use the %p2f values if defined.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.3~.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.2.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* man/Makefile.am (install-data-local): Install the translated man
	pages from the srcdir.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* Makefile.am (EXTRA_DIST): Add 'debian/dpkg-dev.lintian-overrides',
	'debian/dpkg.lintian-overrides', 'debian/dselect.lintian-overrides'
	and 'debian/source.lintian-overrides'.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Create the generic name symlinks
	when there's none, or when it differs to the current one.

2007-05-09  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (config_message): Handle the case
	when @versions is empty. Return a negative value if there's nothing to
	do, 0 on success.
	(config_alternatives): Check for config_message exit value to decide
	to return instead of @versions being empty.